fix: fix the align of the hambuger of the Header

--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -14,8 +14,6 @@
   cursor: pointer;
   transition: 0.3s;
   position: absolute;
-  left: 49%;
-  top: 2.3%;
 }
 
 .logo-image img {
@@ -26,6 +24,7 @@
   display: flex;
   gap: 16px;
   font-size: 11px;
+  align-items: center;
 }
 
 .actions {
